force-app/main/default/objects/Lead__c/fields/Show_Complete_Update_Lead__c.field-meta.xml
<CustomField>
    <fullName>Show_Complete_Update_Lead__c</fullName>
    <formula>IF(
    AND(
        NOT(ISPICKVAL(Status__c, &apos;Completed&apos;)),
        NOT(ISPICKVAL(Status__c, &apos;QA Review Completed&apos;)),
        NOT(ISPICKVAL(Status__c, &apos;QA Rejection Complete&apos;))
    ),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Complete/Update Lead</label>
    <type>Checkbox</type>
</CustomField>