force-app/main/default/objects/Lead__c/fields/Source_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Middle_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>