force-app/main/default/objects/Lead__c/fields/Source_Title__c.field-meta.xml
<CustomField>
    <fullName>Source_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>