force-app/main/default/objects/Lead__c/fields/SourceName__c.field-meta.xml
<CustomField>
    <fullName>SourceName__c</fullName>
    <formula>Source_First_Name__c + &apos; &apos; + Source_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SourceName</label>
    <type>Text</type>
</CustomField>