force-app/main/default/objects/Lead__c/fields/Span_Of_Treatment_Dates_provided_To__c.field-meta.xml
<CustomField>
    <fullName>Span_Of_Treatment_Dates_provided_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Span Of Treatment Dates provided To</label>
    <type>Date</type>
</CustomField>