force-app/main/default/objects/Lead__c/fields/Standardised_Issues_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Standardised_Issues_Picklist__c</fullName>
    <label>Standardised Issues Picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Drugs</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Sexual Misconduct</fullName>
            </value>
            <value>
                <fullName>Honesty</fullName>
            </value>
            <value>
                <fullName>Disruptive or Violent Behavior</fullName>
            </value>
            <value>
                <fullName>Employment Concern, Misconduct</fullName>
            </value>
            <value>
                <fullName>Education Concern, Misconduct</fullName>
            </value>
            <value>
                <fullName>Criminal Activity/Allegation(s)</fullName>
            </value>
            <value>
                <fullName>Firearms and Weapons</fullName>
            </value>
            <value>
                <fullName>Civil Court Actions</fullName>
            </value>
            <value>
                <fullName>Statutory Debarment</fullName>
            </value>
            <value>
                <fullName>Loyalty and Security</fullName>
            </value>
            <value>
                <fullName>Qualifications, Including Health</fullName>
            </value>
            <value>
                <fullName>Associates</fullName>
            </value>
            <value>
                <fullName>Relatives</fullName>
            </value>
            <value>
                <fullName>Foreign Contacts</fullName>
            </value>
            <value>
                <fullName>Foreign Activities</fullName>
            </value>
            <value>
                <fullName>Foreign Travel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>