force-app/main/default/objects/Lead__c/fields/State_of_Birth_Certificate__c.field-meta.xml
<CustomField>
    <fullName>State_of_Birth_Certificate__c</fullName>
    <label>State of Birth Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All States</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>