force-app/main/default/objects/Lead__c/fields/SUBJECT_ETHICAL_BEHAVIOUR_JUDGEMENT__c.field-meta.xml
<CustomField>
    <fullName>SUBJECT_ETHICAL_BEHAVIOUR_JUDGEMENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SUBJECT ETHICAL BEHAVIOUR JUDGEMENT</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>