force-app/main/default/objects/Lead__c/fields/Subject_Interview_Not_Conducted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Subject_Interview_Not_Conducted_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject Interview Not Conducted Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>