force-app/main/default/objects/Lead__c/fields/Subject_SSN_Verified__c.field-meta.xml
<CustomField>
    <fullName>Subject_SSN_Verified__c</fullName>
    <label>Subject SSN Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Discrepant</fullName>
            </value>
            <value>
                <fullName>Not Shown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>