force-app/main/default/objects/Lead__c/fields/Voluntary_Nature_of_Participation__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_Nature_of_Participation__c</fullName>
    <label>Voluntary Nature of Participation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>