force-app/main/default/objects/Lead__c/fields/Was_any_derogatory_information_developed__c.field-meta.xml
<CustomField>
    <fullName>Was_any_derogatory_information_developed__c</fullName>
    <label>Was any derogatory information developed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>