force-app/main/default/objects/Lead__c/recordTypes/Citizenship.recordType-meta.xml
<RecordType>
    <fullName>Citizenship</fullName>
    <active>true</active>
    <label>Citizenship</label>
</RecordType>