force-app/main/default/objects/Lead__c/recordTypes/Education_EDUC.recordType-meta.xml
<RecordType>
    <fullName>Education_EDUC</fullName>
    <active>true</active>
    <label>Education (EDUC)</label>
</RecordType>