force-app/main/default/objects/Lead__c/recordTypes/Employment_EMPL.recordType-meta.xml
<RecordType>
    <fullName>Employment_EMPL</fullName>
    <active>true</active>
    <label>Employment (EMPL)</label>
</RecordType>