force-app/main/default/objects/Lead__c/recordTypes/Employment_History.recordType-meta.xml
<RecordType>
    <fullName>Employment_History</fullName>
    <active>true</active>
    <label>Employment History</label>
</RecordType>