force-app/main/default/objects/Lead__c/recordTypes/Medical_MEDI.recordType-meta.xml
<RecordType>
    <fullName>Medical_MEDI</fullName>
    <active>true</active>
    <label>Medical (MEDI)</label>
</RecordType>