force-app/main/default/objects/Lead__c/recordTypes/Subject_contact_SUBC.recordType-meta.xml
<RecordType>
    <fullName>Subject_contact_SUBC</fullName>
    <active>true</active>
    <label>Subject contact (SUBC)</label>
</RecordType>