force-app/main/default/objects/Lead__c/recordTypes/Subject_Interview_ESI_TESI.recordType-meta.xml
<RecordType>
    <fullName>Subject_Interview_ESI_TESI</fullName>
    <active>true</active>
    <label>Subject Interview (ESI/TESI)</label>
</RecordType>