force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Assigned_To_Name__c</columns>
    <columns>Assignee_Date__c</columns>
    <columns>LeadType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>